[gd_scene load_steps=5 format=3 uid="uid://2fk5ef1bxpm4"]

[ext_resource type="Script" uid="uid://bk2i4bit5weu2" path="res://game/scene_changer/scene_changer.gd" id="1_o3iad"]

[sub_resource type="Animation" id="Animation_o3iad"]
resource_name = "Fade in Out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.466667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_new_scene"
}]
}

[sub_resource type="Animation" id="Animation_5m8tb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5m8tb"]
_data = {
&"Fade in Out": SubResource("Animation_o3iad"),
&"RESET": SubResource("Animation_5m8tb")
}

[node name="SceneChanger" type="CanvasLayer"]
script = ExtResource("1_o3iad")

[node name="ScreenBlender" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 647.0
mouse_filter = 2

[node name="SceneChanger_Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../ScreenBlender")
libraries = {
&"": SubResource("AnimationLibrary_5m8tb")
}
